Fixed a viewport height bug on iOS

--- a/src/app.css
+++ b/src/app.css
@@ -16,7 +16,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100svh;
   display: flex;
   justify-content: center;
   align-items: center;
